Nintendo 3DS Refined.

--- a/handheld/3ds/build_3dstools.htm
+++ b/handheld/3ds/build_3dstools.htm
@@ -46,24 +46,23 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo 3DS</h3>
-<p><b>build libctru</b></p>
+<p><b>build 3dstools</b></p>
 <hr size="1">
 <p>
 步驟如下：
 </p>
 <pre>
-$ export DEVKITPRO=/opt/devkitpro/
-$ export DEVKITARM=/opt/devkitpro/devkitARM/
-
 $ cd
-$ git clone https://github.com/devkitPro/libctru
-$ cd libctru
+$ git clone https://github.com/devkitPro/3dstools
+$ cd 3dstools
+$ ./autogen.sh
+$ ./configure
 $ make
-$ make install
+$ sudo make install
 </pre><br>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
