--- a/handheld/3ds/build_citro2d.htm
+++ b/handheld/3ds/build_citro2d.htm
@@ -46,36 +46,24 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo 3DS</h3>
-<p><b>如何將圖片資源打包到3dsx檔案</b></p>
+<p><b>build citro2d</b></p>
 <hr size="1">
 <p>
-步驟如下：<br>
-1. 在編譯目錄下產生<b>romfs/gfx/</b>資料夾<br>
-2. 將編譯好的xxx.t3x放到<b>romfs/gfx/</b>資料夾內<br>
-3. 程式如下(只列出部份程式)：
-</p>
-<pre class="brush:cpp">
-int main(void)
-{
-    romfsInit();
-
-    FILE* f = fopen("romfs:/gfx/xxx.t3x", "rb");
-    Tex3DS_TextureImportStdio(f, xxx, NULL, false);
-    fclose(f);
-
-    romfsExit();
-    return 0;
-}
-</pre>
-<p>
-4. 編譯部份，加入romfs選項即可
+步驟如下：
 </p>
 <pre>
-$ 3dsxtool main.elf main.3dsx --smdh=main.smdh --romfs=romfs
+$ export DEVKITPRO=/opt/devkitpro/
+$ export DEVKITARM=/opt/devkitpro/devkitARM/
+
+$ cd
+$ git clone https://github.com/devkitPro/citro2d
+$ cd citro2d
+$ make
+$ make install
 </pre><br>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
