--- a/handheld/3ds/build_citro3d.htm
+++ b/handheld/3ds/build_citro3d.htm
@@ -46,25 +46,24 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo 3DS</h3>
-<p><b>build tex3ds</b></p>
+<p><b>build citro3d</b></p>
 <hr size="1">
 <p>
 步驟如下：
 </p>
 <pre>
-$ sudo apt-get install libmagick++-dev libfftw3-dev -y
+$ export DEVKITPRO=/opt/devkitpro/
+$ export DEVKITARM=/opt/devkitpro/devkitARM/
 
 $ cd
-$ git clone https://github.com/devkitPro/tex3ds
-$ cd tex3ds
-$ ./autogen.sh
-$ ./configure
+$ git clone https://github.com/devkitPro/citro3d
+$ cd citro3d
 $ make
-$ sudo make install
+$ make install
 </pre><br>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
