--- a/handheld/3ds/build_picasso.htm
+++ b/handheld/3ds/build_picasso.htm
@@ -45,33 +45,24 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Nintendo 3DS &gt;&gt; C/C++ &gt;&gt; SDL v1.2</h3>
-<p><b>SDL Key</b></p>
+<h3>Nintendo 3DS</h3>
+<p><b>build picasso</b></p>
 <hr size="1">
 <p>
-參考資訊：<br>
-1. <a href="https://libctru.devkitpro.org/index.html">libctru doc</a><br>
-2. <a href="https://github.com/devkitPro/3ds-examples">3ds-examples</a><br>
-3. <a href="https://github.com/nop90/SDL-3DS/blob/master/SDL-1.2.15/src/joystick/n3ds/SDL_sysjoystick.c">SDL_sysjoystick</a><br><br>
-
-如下：
+步驟如下：
 </p>
-<table>
-<tr><th>3DS Key</th><th>SDL Key</th></tr>
-<tr><td>CPad X</td><td>JoystickAxis 0</td></tr>
-<tr><td>CPad Y</td><td>JoystickAxis 1</td></tr>
-<tr><td>A</td><td>JoystickButton 1</td></tr>
-<tr><td>B</td><td>JoystickButton 2</td></tr>
-<tr><td>X</td><td>JoystickButton 3</td></tr>
-<tr><td>Y</td><td>JoystickButton 4</td></tr>
-<tr><td>SELECT</td><td>JoystickButton 7</td></tr>
-<tr><td>START</td><td>JoystickButton 8</td></tr>
-<tr><td>L</td><td>JoystickButton 5</td></tr>
-<tr><td>R</td><td>JoystickButton 6</td></tr>
-</table><br>
+<pre>
+$ cd
+$ git clone https://github.com/devkitPro/picasso
+$ cd picasso
+$ ./autogen.sh
+$ ./configure
+$ make
+$ sudo make install
+</pre><br>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
