--- a/handheld/3ds/review.htm
+++ b/handheld/3ds/review.htm
@@ -51,15 +51,15 @@
 簡要規格
 </p>
 <table>
-  <tr><th>CPU</th><td>Dual-core ARM11 MPCore 268 MHz + Single-core ARM9</td></tr>
+  <tr><th>CPU</th><td>ARM11 268MHz x 2 and ARM9</td></tr>
   <tr><th>GPU</th><td>DMP PICA200 268MHz</td></tr>
-  <tr><th>RAM</th><td>128MB FCRAM, 6MB VRAM (Fujitsu MB82M8080-07L FC-RAM)</td></tr>
+  <tr><th>RAM</th><td>128MB FCRAM and 6MB VRAM (Fujitsu MB82M8080-07L FC-RAM)</td></tr>
   <tr><th>Flash</th><td>2GB</td></tr>
   <tr><th>Top Screen</th><td>3.53" 400x240</td></tr>
   <tr><th>Bottom Screen</th><td>3.02" 320x240 (Resistive Touch)</td></tr>
   <tr><th>Slot</th><td>Game Card and SDCard</td></tr>
   <tr><th>WLAN</th><td>Wi-Fi 802.11 b/g</td></tr>
-  <tr><th>Gamepad</th><td>DPad, 4 Buttons, Start, Home, Select, L1, R1 and Analog Stick</td></tr>
+  <tr><th>Gamepad</th><td>DPad, 4 Buttons, Start, Home, Select, L1 and R1</td></tr>
   <tr><th>Battery</th><td>3.7V 1300mA</td></tr>
   <tr><th>Dimension</th><td>134mm x 74mm x 22mm</td></tr>
   <tr><th>Weight</th><td>235g</td></tr>
