--- a/handheld.htm
+++ b/handheld.htm
@@ -5773,6 +5773,90 @@ Nintendo 3DS</h3>
 &lowast;
 <a href="handheld/3ds/mod.htm">
 改造電池、充電接頭</a><br>
+
+&lowast;
+<a href="handheld/3ds/sdlkey.htm">
+SDL Key</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_grit.htm">
+build grit</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_libnds.htm">
+build libnds</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_libfat.htm">
+build libfat</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_dswifi.htm">
+build dswifi</a><br>
+
+&lowast;
+<a href="handheld/3ds/build_tex3ds.htm">
+build tex3ds</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_mmutil.htm">
+build mmutil</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_maxmod.htm">
+build maxmod</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_ndstool.htm">
+build ndstool</a><br>
+
+&lowast;
+<a href="handheld/3ds/build_picasso.htm">
+build picasso</a><br>
+
+&lowast;
+<a href="handheld/3ds/build_libctru.htm">
+build libctru</a><br>
+
+&lowast;
+<a href="handheld/3ds/build_citro2d.htm">
+build citro2d</a><br>
+
+&lowast;
+<a href="handheld/3ds/build_citro3d.htm">
+build citro3d</a><br>
+
+&lowast;
+<a href="handheld/3ds/build_3dstools.htm">
+build 3dstools</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_nds-examples.htm">
+build nds-examples</a><br>
+
+&lowast;
+<a href="handheld/3ds/build_3ds-examples.htm">
+build 3ds-examples</a><br>
+
+&lowast;
+<a href="handheld/ndsl/build_general-tools.htm">
+build general-tools</a><br>
+
+&lowast;
+<a href="handheld/3ds/build_devkitpro.htm">
+build devkitpro (CROSSBUILD=aarch64-linux-gnu)</a><br>
+
+&lowast;
+<a href="handheld/3ds/build_devkitpro_armhf.htm">
+build devkitpro (CROSSBUILD=arm-linux-gnueabihf)</a><br>
+
+&lowast;
+<a href="handheld/3ds/include_static_link_resource.htm">
+如何將圖片資源打包到3dsx檔案</a><br>
+
+&lowast;
+<a href="handheld/3ds/fix_crossbuild.htm">
+解決"gcc.cc: undefined reference to host_detect_local_cpu(int, char const**)"問題</a><br>
 <br><br><br><br>
 
 <div id="3dsll"></div>
