--- a/handheld/3ds/build_tex3ds.htm
+++ b/handheld/3ds/build_tex3ds.htm
@@ -46,15 +46,17 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo 3DS</h3>
-<p><b>build 3dstools</b></p>
+<p><b>build tex3ds</b></p>
 <hr size="1">
 <p>
 步驟如下：
 </p>
 <pre>
+$ sudo apt-get install libmagick++-dev libfftw3-dev -y
+
 $ cd
-$ git clone https://github.com/devkitPro/3dstools
-$ cd 3dstools
+$ git clone https://github.com/devkitPro/tex3ds
+$ cd tex3ds
 $ ./autogen.sh
 $ ./configure
 $ make
@@ -62,7 +64,7 @@ $ sudo make install
 </pre><br>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
