--- a/handheld/3ds/fix_crossbuild.htm
+++ b/handheld/3ds/fix_crossbuild.htm
@@ -79,7 +79,7 @@ P.S. 如果在ARM CPU上面編譯devkitpro，需要指定CROSSBUILD
 </p>
 
 <p>
-<br><a href="../../emu.htm">返回上一頁</a>
+<br><a href="../../handheld.htm">返回上一頁</a>
 </p>
 
 </div>
