PlayStation Vita Added UART pinout.

--- a/handheld/psv1000/uart.htm
+++ b/handheld/psv1000/uart.htm
@@ -45,25 +45,16 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>PlayStation Vita 2000</h3>
-<p><b>build toolchain</b></p>
+<h3>PlayStation Vita 1000</h3>
+<p><b>UART腳位</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/vitasdk/buildscripts">buildscripts</a><br><br>
+1. <a href="https://wiki.henkaku.xyz/vita/UART_Console">UART_Console</a><br><br>
 
-步驟如下：
+如下：<br>
+<img src="uart/1.jpg" class="maxSize">
 </p>
-<pre>
-$ cd
-$ git clone https://github.com/vitasdk/buildscripts
-$ cd buildscripts
-$ git submodule update --init --recursive
-$ mkdir build
-$ cd build
-$ cmake ..
-$ make -j4
-</pre><br>
 
 <p>
 <br><a href="../../handheld.htm">返回上一頁</a>
