--- a/handheld.htm
+++ b/handheld.htm
@@ -145,7 +145,7 @@
     <a href="#psp1007"><img src="img/photos/psp1007.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PSP 1007"/></a>
     <a href="#psp2007"><img src="img/photos/psp2007.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PSP 2007"/></a>
     <a href="#pspgo"><img src="img/photos/pspgo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PSP Go"/></a>
-    <a href="#psv"><img src="img/photos/psv.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PlayStation Vita 1000"/></a>
+    <a href="#psv1000"><img src="img/photos/psv1000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PlayStation Vita 1000"/></a>
     <a href="#psv2000"><img src="img/photos/psv2000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PlayStation Vita 2000"/></a>
     <a href="#funkeys"><img src="img/photos/funkeys.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="FunKey S"/></a>
     <a href="#pico"><img src="img/photos/pico.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PicoSystem"/></a>
@@ -4064,14 +4064,18 @@ HTC Kaiser 3.7V 1250mA電池</a><br>
 build psptoolchain</a><br>
 <br><br><br><br>
 
-<div id="psv"></div>
-<h3><img src="img/photos/psv.jpg" class="floatLeft"/>
+<div id="psv1000"></div>
+<h3><img src="img/photos/psv1000.jpg" class="floatLeft"/>
 PlayStation Vita 1000</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
-<a href="handheld/psv/review.htm">
+<a href="handheld/psv1000/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="handheld/psv1000/uart.htm">
+UART位置</a><br>
 <br><br><br><br>
 
 <div id="psv2000"></div>
