TRIMUI SMART Customized GPIO modding.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4715,6 +4715,10 @@ UART腳位</a><br>
 如何設定音量</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/cust_key.htm">
+GPIO按鍵改造</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/led.htm">
 改善LED太亮的問題</a><br>
 
