--- a/program/gnu/cpp_lz77.htm
+++ b/program/gnu/cpp_lz77.htm
@@ -73,10 +73,10 @@ uint32_t lz77_compress(uint8_t *src, uint32_t slen, uint8_t *dst)
     *((uint32_t*)dst) = slen;
     cptr = osize = 4;
 
-    for (cpos = 0; cpos &lt; slen; ++cpos) {
+    for (cpos = 0; cpos &lt; slen; cpos++) {
         ppos = 0;
         plen = 0;
-        for (tpos = 1; (tpos &lt; 4096) &amp;&amp; (tpos &lt;= cpos); ++tpos) {
+        for (tpos = 1; (tpos &lt; 4096) &amp;&amp; (tpos &lt;= cpos); tpos++) {
             lkb = cpos - tpos;
             lka = cpos;
             for (tlen = 0; src[lka++] == src[lkb++]; tlen++) {
@@ -96,7 +96,8 @@ uint32_t lz77_compress(uint8_t *src, uint32_t slen, uint8_t *dst)
         if (plen &amp;&amp; (cpos == slen)) {
             optr = (ppos &lt;&lt; 4) | (plen - 1);
             oref = cpos - 1;
-        } else {
+        }
+        else {
             optr = (ppos &lt;&lt; 4) | plen;
             oref = cpos;
         }
