--- a/program/gnu/cpp_rdynamic.htm
+++ b/program/gnu/cpp_rdynamic.htm
@@ -51,7 +51,7 @@
 參考資訊：<br>
 1. <a href="https://stackoverflow.com/questions/36692315/what-exactly-does-rdynamic-do-and-when-exactly-is-it-needed">what-exactly-does-rdynamic-do-and-when-exactly-is-it-needed</a><br><br>
 
-<b>-rdynamic</b>意指export function給share library呼叫使用<br><br>
+<b>-rdynamic</b>: This instructs the linker to add all symbols, not only used ones, to the dynamic symbol table<br><br>
 
 dl.c
 </p>
@@ -64,9 +64,10 @@ void hello(void)
 {
     out("hello, world!\n");
 }
-</pre><br>
-
+</pre>
 <p>
+P.S. 由於export all symbols，因此，可以在share library中呼叫out()<br><br>
+
 main.c
 </p>
 <pre class="brush:cpp">
