--- a/program/gnu/cpp_read_hid.htm
+++ b/program/gnu/cpp_read_hid.htm
@@ -76,8 +76,7 @@ static uint32_t get_ticks(void)
     if (init_tv.tv_sec == 0) {
         init_tv = tv;
     }
-    return ((tv.tv_sec - init_tv.tv_sec) * 1000000) + tv.tv_usec -
-           init_tv.tv_usec;
+    return ((tv.tv_sec - init_tv.tv_sec) * 1000000) + tv.tv_usec - init_tv.tv_usec;
 }
 
 int main(int argc, char **argv)
