--- a/program.htm
+++ b/program.htm
@@ -1523,7 +1523,7 @@ SDL</h3>
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    C/C++<br>
+    <b>C/C++</b><br>
         
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/sdl/v1.2/cpp_hello.htm">
@@ -1674,14 +1674,14 @@ SDL</h3>
             String</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    Assembly (x64)<br>
+    <b>Assembly (x64)</b><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/sdl/v1.2/x64_hello.htm">
             Hello, world!</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    Assembly (ARM)<br>
+    <b>Assembly (ARM)</b><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/sdl/v1.2/arm_hello.htm">
