--- a/program/sdl/v1.2/cpp_blit.htm
+++ b/program/sdl/v1.2/cpp_blit.htm
@@ -58,26 +58,26 @@ main.c
 #include &lt;stdlib.h&gt;
 #include &lt;SDL.h&gt;
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Rect rt={0};
-  SDL_Surface* screen;
- 
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
-  SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0xff, 0x00));
- 
-  SDL_Surface* bmp = SDL_LoadBMP("main.bmp");
+    SDL_Rect rt = {0};
+    SDL_Surface *screen = NULL;
 
-  rt.x = 100;
-  rt.y = 100;
-  SDL_BlitSurface(bmp, NULL, screen, &amp;rt);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
- 
-  SDL_FreeSurface(bmp);
-  SDL_Quit();
-  return 0;
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0xff, 0x00));
+
+    SDL_Surface *bmp = SDL_LoadBMP("main.bmp");
+
+    rt.x = 100;
+    rt.y = 100;
+    SDL_BlitSurface(bmp, NULL, screen, &amp;rt);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
+
+    SDL_FreeSurface(bmp);
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 <p>
