--- a/program/sdl/v1.2/cpp_bmp_rw.htm
+++ b/program/sdl/v1.2/cpp_bmp_rw.htm
@@ -60,22 +60,22 @@ main.c
 
 #include "hex_bmp.h"
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
- 
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    SDL_Surface *screen = NULL;
 
-  SDL_RWops *rw = SDL_RWFromMem(hex_bmp, sizeof(hex_bmp));
-  SDL_Surface* bmp = SDL_LoadBMP_RW(rw, 1);
-  SDL_BlitSurface(bmp, NULL, screen, NULL);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
- 
-  SDL_FreeSurface(bmp);
-  SDL_Quit();
-  return 0;
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+
+    SDL_RWops *rw = SDL_RWFromMem(hex_bmp, sizeof(hex_bmp));
+    SDL_Surface *bmp = SDL_LoadBMP_RW(rw, 1);
+    SDL_BlitSurface(bmp, NULL, screen, NULL);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
+
+    SDL_FreeSurface(bmp);
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 <p>
