--- a/program/sdl/v1.2/cpp_colorkey.htm
+++ b/program/sdl/v1.2/cpp_colorkey.htm
@@ -58,26 +58,26 @@ main.c
 #include &lt;stdlib.h&gt;
 #include &lt;SDL.h&gt;
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
+    SDL_Surface *screen = NULL;
 
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
-  SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0xff, 0x00, 0x00));
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0xff, 0x00, 0x00));
 
-  SDL_Surface* bmp = SDL_LoadBMP("main.bmp");
-  SDL_Surface *key = SDL_DisplayFormat(bmp);
-  SDL_SetColorKey(key, SDL_SRCCOLORKEY, SDL_MapRGB(key-&gt;format, 0, 0, 0));
+    SDL_Surface *bmp = SDL_LoadBMP("main.bmp");
+    SDL_Surface *key = SDL_DisplayFormat(bmp);
+    SDL_SetColorKey(key, SDL_SRCCOLORKEY, SDL_MapRGB(key-&gt;format, 0, 0, 0));
 
-  SDL_BlitSurface(key, NULL, screen, NULL);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
+    SDL_BlitSurface(key, NULL, screen, NULL);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
 
-  SDL_FreeSurface(bmp);
-  SDL_FreeSurface(key);
-  SDL_Quit();
-  return 0;
+    SDL_FreeSurface(bmp);
+    SDL_FreeSurface(key);
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 <p>
