--- a/program/sdl/v1.2/cpp_convert.htm
+++ b/program/sdl/v1.2/cpp_convert.htm
@@ -58,23 +58,23 @@ main.c
 #include &lt;stdlib.h&gt;
 #include &lt;SDL.h&gt;
  
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
- 
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
- 
-  SDL_Surface* bmp = SDL_LoadBMP("main.bmp");
-  SDL_Surface *t = SDL_ConvertSurface(bmp, screen-&gt;format, 0);
-  SDL_SoftStretch(t, NULL, screen, NULL);
-  SDL_FreeSurface(t);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
- 
-  SDL_FreeSurface(bmp);
-  SDL_Quit();
-  return 0;
+    SDL_Surface *screen = NULL;
+
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+
+    SDL_Surface *bmp = SDL_LoadBMP("main.bmp");
+    SDL_Surface *t = SDL_ConvertSurface(bmp, screen-&gt;format, 0);
+    SDL_SoftStretch(t, NULL, screen, NULL);
+    SDL_FreeSurface(t);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
+
+    SDL_FreeSurface(bmp);
+    SDL_Quit();
+    return 0;
 }
 </pre>
 <p>
