--- a/program/sdl/v1.2/cpp_fill.htm
+++ b/program/sdl/v1.2/cpp_fill.htm
@@ -58,32 +58,32 @@ main.c
 #include &lt;stdlib.h&gt;
 #include &lt;SDL.h&gt;
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Rect rt={0};
-  SDL_Surface* screen;
+    SDL_Rect rt = {0};
+    SDL_Surface *screen = NULL;
 
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
 
-  SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0xff, 0x00, 0x00));
+    SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0xff, 0x00, 0x00));
 
-  rt.x = 50;
-  rt.y = 50;
-  rt.w = 30;
-  rt.h = 30;
-  SDL_FillRect(screen, &amp;rt, SDL_MapRGB(screen-&gt;format, 0x00, 0xff, 0x00));
+    rt.x = 50;
+    rt.y = 50;
+    rt.w = 30;
+    rt.h = 30;
+    SDL_FillRect(screen, &amp;rt, SDL_MapRGB(screen-&gt;format, 0x00, 0xff, 0x00));
 
-  rt.x = 100;
-  rt.y = 100;
-  rt.w = 50;
-  rt.h = 100;
-  SDL_FillRect(screen, &amp;rt, SDL_MapRGB(screen-&gt;format, 0x00, 0x00, 0xff));
-  
-  SDL_Flip(screen);
-  SDL_Delay(3000);
-  SDL_Quit();
-  return 0;
+    rt.x = 100;
+    rt.y = 100;
+    rt.w = 50;
+    rt.h = 100;
+    SDL_FillRect(screen, &amp;rt, SDL_MapRGB(screen-&gt;format, 0x00, 0x00, 0xff));
+
+    SDL_Flip(screen);
+    SDL_Delay(3000);
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 
