--- a/program/sdl/v1.2/cpp_font_rw.htm
+++ b/program/sdl/v1.2/cpp_font_rw.htm
@@ -61,30 +61,31 @@ main.c
 
 #include "hex_font.h"
 
-int main(int argc, char* args[])
+int main(int argc, char **args)
 {
-  char buf[255]={0};
-  SDL_Surface* screen;
-    
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
-  TTF_Init();
-  SDL_RWops *rw = SDL_RWFromMem(hex_font, sizeof(hex_font));
-  TTF_Font *font = TTF_OpenFontRW(rw, 1, 30);
-  SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0x00, 0x00));
- 
-  SDL_Color col={0, 255, 0};
-  SDL_Rect rt={50, 100, 0, 0};
-  SDL_Surface *msg = TTF_RenderUTF8_Solid(font, "司徒的教學網站", col);
-  SDL_BlitSurface(msg, NULL, screen, &amp;rt);
-  SDL_Flip(screen);
-  SDL_FreeSurface(msg);
-  SDL_Delay(3000);
-   
-  TTF_CloseFont(font);
-  TTF_Quit();
-  SDL_Quit();
-  return 0;
+    char buf[255] = {0};
+    SDL_Surface *screen = NULL;
+
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+
+    TTF_Init();
+    SDL_RWops *rw = SDL_RWFromMem(hex_font, sizeof(hex_font));
+    TTF_Font *font = TTF_OpenFontRW(rw, 1, 30);
+    SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0x00, 0x00));
+
+    SDL_Color col = {0, 255, 0};
+    SDL_Rect rt = {50, 100, 0, 0};
+    SDL_Surface *msg = TTF_RenderUTF8_Solid(font, "司徒的教學網站", col);
+    SDL_BlitSurface(msg, NULL, screen, &amp;rt);
+    SDL_Flip(screen);
+    SDL_FreeSurface(msg);
+    SDL_Delay(3000);
+
+    TTF_CloseFont(font);
+    TTF_Quit();
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 <p>
