--- a/program/sdl/v1.2/cpp_gfx_ellipse.htm
+++ b/program/sdl/v1.2/cpp_gfx_ellipse.htm
@@ -74,20 +74,20 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_gfxPrimitives.h&gt;
   
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
-  
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
-  ellipseRGBA(screen, 50, 100, 20, 10, 0xff, 0x00, 0x00, 0xff);
-  aaellipseRGBA(screen, 100, 100, 20, 10, 0x00, 0xff, 0x00, 0xff);
-  filledEllipseRGBA(screen, 150, 100, 20, 10, 0x00, 0x00, 0xff, 0xff);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
-  
-  SDL_Quit();
-  return 0;
+    SDL_Surface *screen = NULL;
+
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    ellipseRGBA(screen, 50, 100, 20, 10, 0xff, 0x00, 0x00, 0xff);
+    aaellipseRGBA(screen, 100, 100, 20, 10, 0x00, 0xff, 0x00, 0xff);
+    filledEllipseRGBA(screen, 150, 100, 20, 10, 0x00, 0x00, 0xff, 0xff);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
+
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 
