--- a/program/sdl/v1.2/cpp_gfx_line.htm
+++ b/program/sdl/v1.2/cpp_gfx_line.htm
@@ -77,21 +77,21 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_gfxPrimitives.h&gt;
   
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
-  
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
-  lineRGBA(screen, 10, 10, 50, 50, 0xff, 0xff, 0x00, 0xff);
-  aalineRGBA(screen, 20, 70, 200, 70, 0x00, 0xff, 0xff, 0xff);
-  hlineRGBA(screen, 100, 200, 100, 0x00, 0xff, 0x00, 0xff);
-  vlineRGBA(screen, 100, 200, 100, 0xff, 0x00, 0x00, 0xff);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
-  
-  SDL_Quit();
-  return 0;
+    SDL_Surface *screen = NULL;
+
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    lineRGBA(screen, 10, 10, 50, 50, 0xff, 0xff, 0x00, 0xff);
+    aalineRGBA(screen, 20, 70, 200, 70, 0x00, 0xff, 0xff, 0xff);
+    hlineRGBA(screen, 100, 200, 100, 0x00, 0xff, 0x00, 0xff);
+    vlineRGBA(screen, 100, 200, 100, 0xff, 0x00, 0x00, 0xff);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
+
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 
