--- a/program/sdl/v1.2/cpp_hello.htm
+++ b/program/sdl/v1.2/cpp_hello.htm
@@ -59,19 +59,19 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_gfxPrimitives.h&gt;
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
+    SDL_Surface *screen = NULL;
 
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
 
-  stringRGBA(screen, 100, 100, "hello, world!", 0xff, 0xff, 0xff, 0xff);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
+    stringRGBA(screen, 100, 100, "hello, world!", 0xff, 0xff, 0xff, 0xff);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
 
-  SDL_Quit();
-  return 0;
+    SDL_Quit();
+    return 0;
 }
 </pre>
 <p>
