--- a/program/sdl/v1.2/cpp_mouse.htm
+++ b/program/sdl/v1.2/cpp_mouse.htm
@@ -59,36 +59,37 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_gfxPrimitives.h&gt;
 
-int main(int argc, char* args[])
+int main(int argc, char **args)
 {
-  char buf[255]={0};
-  SDL_Surface* screen;
-   
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
-  SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0x00, 0x00));
-  SDL_Flip(screen);
-  
-  SDL_Event event;
-  while(1){
-    if(SDL_PollEvent(&amp;event)){
-      if(event.type == SDL_MOUSEMOTION){
-        int x=0, y=0;
+    char buf[255] = {0};
+    SDL_Surface *screen = NULL;
 
-        SDL_GetMouseState(&amp;x, &amp;y);
-        sprintf(buf, "mouse pos: %d %d", x, y);
-        SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0x00, 0x00));
-        stringRGBA(screen, 100, 100, buf, 0xff, 0xff, 0xff, 0xff);
-        SDL_Flip(screen); 
-      }
-      if((event.type == SDL_MOUSEBUTTONUP) || (event.type == SDL_MOUSEBUTTONDOWN)){
-        break;
-      }
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0x00, 0x00));
+    SDL_Flip(screen);
+
+    SDL_Event event;
+    while (1) {
+        if (SDL_PollEvent(&amp;event)) {
+            if (event.type == SDL_MOUSEMOTION) {
+                int x = 0, y = 0;
+
+                SDL_GetMouseState(&amp;x, &amp;y);
+                sprintf(buf, "mouse pos: %d %d", x, y);
+                SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0x00, 0x00));
+                stringRGBA(screen, 100, 100, buf, 0xff, 0xff, 0xff, 0xff);
+                SDL_Flip(screen);
+            }
+
+            if ((event.type == SDL_MOUSEBUTTONUP) || (event.type == SDL_MOUSEBUTTONDOWN)) {
+                break;
+            }
+        }
+        SDL_Delay(100);
     }
-    SDL_Delay(100);
-  }
-  SDL_Quit();
-  return 0;    
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 
