--- a/program/sdl/v1.2/cpp_pixels.htm
+++ b/program/sdl/v1.2/cpp_pixels.htm
@@ -58,25 +58,25 @@ main.c
 #include &lt;stdlib.h&gt;
 #include &lt;SDL.h&gt;
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
- 
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    SDL_Surface *screen = NULL;
 
-  int x=0, y=0;
-  uint16_t *d = screen-&gt;pixels;
-  for(y=0; y&lt;screen-&gt;h; y++){
-    for(x=0; x&lt;screen-&gt;w; x++){
-      *d++ = 0xf800;
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+
+    int x = 0, y = 0;
+    uint16_t *d = screen-&gt;pixels;
+    for (y = 0; y &lt; screen-&gt;h; y++) {
+        for (x = 0; x &lt; screen-&gt;w; x++) {
+            *d++ = 0xf800;
+        }
     }
-  }
- 
-  SDL_Flip(screen);
-  SDL_Delay(3000);
-  SDL_Quit();
-  return 0;
+
+    SDL_Flip(screen);
+    SDL_Delay(3000);
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 <p>
