--- a/program/sdl/v1.2/cpp_png.htm
+++ b/program/sdl/v1.2/cpp_png.htm
@@ -59,21 +59,21 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_image.h&gt;
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
+    SDL_Surface *screen = NULL;
 
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
 
-  SDL_Surface* png = IMG_Load("main.png");
-  SDL_BlitSurface(png, NULL, screen, NULL);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
+    SDL_Surface *png = IMG_Load("main.png");
+    SDL_BlitSurface(png, NULL, screen, NULL);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
 
-  SDL_FreeSurface(png);
-  SDL_Quit();
-  return 0;
+    SDL_FreeSurface(png);
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 <p>
