--- a/program/sdl/v1.2/cpp_png_rw.htm
+++ b/program/sdl/v1.2/cpp_png_rw.htm
@@ -61,22 +61,22 @@ main.c
 
 #include "hex_png.h"
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
- 
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    SDL_Surface *screen = NULL;
 
-  SDL_RWops *rw = SDL_RWFromMem(hex_png, sizeof(hex_png));
-  SDL_Surface* png = IMG_Load_RW(rw, 1);
-  SDL_BlitSurface(png, NULL, screen, NULL);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
- 
-  SDL_FreeSurface(png);
-  SDL_Quit();
-  return 0;
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+
+    SDL_RWops *rw = SDL_RWFromMem(hex_png, sizeof(hex_png));
+    SDL_Surface *png = IMG_Load_RW(rw, 1);
+    SDL_BlitSurface(png, NULL, screen, NULL);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
+
+    SDL_FreeSurface(png);
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 <p>
