--- a/program/sdl/v1.2/cpp_ticks.htm
+++ b/program/sdl/v1.2/cpp_ticks.htm
@@ -59,25 +59,25 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_gfxPrimitives.h&gt;
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
- 
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
- 
-  Uint32 start = SDL_GetTicks();
-  SDL_Delay(1000);
-  Uint32 end = SDL_GetTicks();
+    SDL_Surface *screen = NULL;
 
-  char buf[255]={0};
-  sprintf(buf, "strat:%d, end:%d", start, end);
-  stringRGBA(screen, 100, 100, buf, 0xff, 0xff, 0xff, 0xff);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
- 
-  SDL_Quit();
-  return 0;
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+
+    Uint32 start = SDL_GetTicks();
+    SDL_Delay(1000);
+    Uint32 end = SDL_GetTicks();
+
+    char buf[255] = {0};
+    sprintf(buf, "strat:%d, end:%d", start, end);
+    stringRGBA(screen, 100, 100, buf, 0xff, 0xff, 0xff, 0xff);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
+
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 
