--- a/program/sdl/v1.2/sw_hw_surface.htm
+++ b/program/sdl/v1.2/sw_hw_surface.htm
@@ -60,7 +60,7 @@
 <pre class="brush:cpp">
 583 SDL_Surface * SDL_SetVideoMode (int width, int height, int bpp, Uint32 flags)
 ...
-683   mode = video->SetVideoMode(this, prev_mode,video_w,video_h,video_bpp,flags);
+683   mode = video-&gt;SetVideoMode(this, prev_mode,video_w,video_h,video_bpp,flags);
 </pre><br>
 
 <p>
@@ -104,7 +104,7 @@
 1222   surfaces_memtotal = size;
 1223   surfaces_memleft = size;
 1224 
-1225   if ( surfaces_memleft > 0 ) {
+1225   if ( surfaces_memleft &gt; 0 ) {
 1226     bucket = (vidmem_bucket *)SDL_malloc(sizeof(*bucket));
 </pre><br>
 
