--- a/program/sdl/v1.2/cpp_alpha.htm
+++ b/program/sdl/v1.2/cpp_alpha.htm
@@ -59,23 +59,23 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_image.h&gt;
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
+    SDL_Surface *screen = NULL;
  
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
-  SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0xff, 0x00));
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0xff, 0x00));
  
-  SDL_Surface* png = IMG_Load("main.png");
-  SDL_SetAlpha(screen, SDL_SRCALPHA, 128);
-  SDL_BlitSurface(png, NULL, screen, NULL);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
+    SDL_Surface *png = IMG_Load("main.png");
+    SDL_SetAlpha(screen, SDL_SRCALPHA, 128);
+    SDL_BlitSurface(png, NULL, screen, NULL);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
  
-  SDL_FreeSurface(png);
-  SDL_Quit();
-  return 0;
+    SDL_FreeSurface(png);
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 <p>
