--- a/program/sdl/v1.2/cpp_bmp.htm
+++ b/program/sdl/v1.2/cpp_bmp.htm
@@ -58,21 +58,21 @@ main.c
 #include &lt;stdlib.h&gt;
 #include &lt;SDL.h&gt;
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
+    SDL_Surface *screen = NULL;
 
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
 
-  SDL_Surface* bmp = SDL_LoadBMP("main.bmp");
-  SDL_BlitSurface(bmp, NULL, screen, NULL);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
+    SDL_Surface *bmp = SDL_LoadBMP("main.bmp");
+    SDL_BlitSurface(bmp, NULL, screen, NULL);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
 
-  SDL_FreeSurface(bmp);
-  SDL_Quit();
-  return 0;
+    SDL_FreeSurface(bmp);
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 <p>
