--- a/program/sdl/v1.2/cpp_box.htm
+++ b/program/sdl/v1.2/cpp_box.htm
@@ -59,20 +59,20 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_gfxPrimitives.h&gt;
 
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Rect rt={0};
-  SDL_Surface* screen;
- 
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE); 
+    SDL_Rect rt = {0};
+    SDL_Surface *screen = NULL;
 
-  boxRGBA(screen, 50, 100, 100, 150, 0xff, 0x00, 0x00, 0xff);	
-    
-  SDL_Flip(screen);
-  SDL_Delay(3000);
-  SDL_Quit();
-  return 0;
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+
+    boxRGBA(screen, 50, 100, 100, 150, 0xff, 0x00, 0x00, 0xff);
+
+    SDL_Flip(screen);
+    SDL_Delay(3000);
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 
