--- a/program/sdl/v1.2/cpp_font.htm
+++ b/program/sdl/v1.2/cpp_font.htm
@@ -59,34 +59,34 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_ttf.h&gt;
  
-int main(int argc, char* args[])
+int main(int argc, char **args)
 {
-  char buf[255]={0};
-  SDL_Surface* screen;
-   
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
-  TTF_Init();
-  TTF_Font *font = TTF_OpenFont("font.ttf", 30);
-  SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0x00, 0x00));
+    char buf[255] = {0};
+    SDL_Surface *screen = NULL;
 
-  int w=0, h=0;
-  SDL_Color col={0, 255, 0};
-  SDL_Rect rt={0, 100, 0, 0};
-  const char* cc="司徒的教學網站";
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    TTF_Init();
+    TTF_Font *font = TTF_OpenFont("font.ttf", 30);
+    SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0x00, 0x00));
 
-  TTF_SizeUTF8(font, cc, &amp;w, &amp;h);
-  rt.x = (320 - w) / 2;
-  SDL_Surface *msg = TTF_RenderUTF8_Solid(font, cc, col);
-  SDL_BlitSurface(msg, NULL, screen, &amp;rt);
-  SDL_Flip(screen);
-  SDL_FreeSurface(msg);
-  SDL_Delay(3000);
+    int w = 0, h = 0;
+    SDL_Color col = {0, 255, 0};
+    SDL_Rect rt = {0, 100, 0, 0};
+    const char *cc = "司徒的教學網站";
 
-  TTF_CloseFont(font);
-  TTF_Quit();
-  SDL_Quit();
-  return 0;
+    TTF_SizeUTF8(font, cc, &amp;w, &amp;h);
+    rt.x = (320 - w) / 2;
+    SDL_Surface *msg = TTF_RenderUTF8_Solid(font, cc, col);
+    SDL_BlitSurface(msg, NULL, screen, &amp;rt);
+    SDL_Flip(screen);
+    SDL_FreeSurface(msg);
+    SDL_Delay(3000);
+
+    TTF_CloseFont(font);
+    TTF_Quit();
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 <p>
