--- a/program/sdl/v1.2/cpp_gfx_pie.htm
+++ b/program/sdl/v1.2/cpp_gfx_pie.htm
@@ -71,19 +71,19 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_gfxPrimitives.h&gt;
   
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
-  
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
-  pieRGBA(screen, 100, 100, 30, 0, 90, 0xff, 0x00, 0x00, 0xff);
-  filledPieRGBA(screen, 150, 100, 30, 0, 45, 0x00, 0xff, 0x00, 0xff);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
-  
-  SDL_Quit();
-  return 0;
+    SDL_Surface *screen = NULL;
+
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    pieRGBA(screen, 100, 100, 30, 0, 90, 0xff, 0x00, 0x00, 0xff);
+    filledPieRGBA(screen, 150, 100, 30, 0, 45, 0x00, 0xff, 0x00, 0xff);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
+
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 
