--- a/program/sdl/v1.2/cpp_gfx_pixel.htm
+++ b/program/sdl/v1.2/cpp_gfx_pixel.htm
@@ -68,24 +68,24 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_gfxPrimitives.h&gt;
  
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
- 
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    SDL_Surface *screen = NULL;
 
-  int x=0, y=0;
-  for(y=0; y&lt;100; y++){
-    for(x=0; x&lt;100; x++){
-      pixelRGBA(screen, x, y, 0x00, 0xff, 0x00, 0xff);
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+
+    int x = 0, y = 0;
+    for (y = 0; y &lt; 100; y++) {
+        for (x = 0; x &lt; 100; x++) {
+            pixelRGBA(screen, x, y, 0x00, 0xff, 0x00, 0xff);
+        }
     }
-  }
-  SDL_Flip(screen);
-  SDL_Delay(3000);
- 
-  SDL_Quit();
-  return 0;
+    SDL_Flip(screen);
+    SDL_Delay(3000);
+
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 
