--- a/program/sdl/v1.2/cpp_gfx_rectangle.htm
+++ b/program/sdl/v1.2/cpp_gfx_rectangle.htm
@@ -70,19 +70,19 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_gfxPrimitives.h&gt;
  
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
- 
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
-  rectangleRGBA(screen, 10, 10, 100, 100, 0xff, 0x00, 0x00, 0xff);
-  boxRGBA(screen, 150, 150, 100, 100, 0x00, 0xff, 0x00, 0xff);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
- 
-  SDL_Quit();
-  return 0;
+    SDL_Surface *screen = NULL;
+
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    rectangleRGBA(screen, 10, 10, 100, 100, 0xff, 0x00, 0x00, 0xff);
+    boxRGBA(screen, 150, 150, 100, 100, 0x00, 0xff, 0x00, 0xff);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
+
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 
