--- a/program/sdl/v1.2/cpp_gfx_trigon.htm
+++ b/program/sdl/v1.2/cpp_gfx_trigon.htm
@@ -74,20 +74,20 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_gfxPrimitives.h&gt;
    
-int main(int argc, char** argv)
+int main(int argc, char **argv)
 {
-  SDL_Surface* screen;
-   
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
-  trigonRGBA(screen, 100, 10, 200, 60, 100, 60, 0xff, 0x00, 0x00, 0xff);
-  aatrigonRGBA(screen, 100, 80, 200, 130, 100, 130, 0x00, 0xff, 0x00, 0xff);
-  filledTrigonRGBA(screen, 100, 150, 200, 200, 100, 200, 0xff, 0xff, 0x00, 0xff);
-  SDL_Flip(screen);
-  SDL_Delay(3000);
-   
-  SDL_Quit();
-  return 0;
+    SDL_Surface *screen = NULL;
+
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    trigonRGBA(screen, 100, 10, 200, 60, 100, 60, 0xff, 0x00, 0x00, 0xff);
+    aatrigonRGBA(screen, 100, 80, 200, 130, 100, 130, 0x00, 0xff, 0x00, 0xff);
+    filledTrigonRGBA(screen, 100, 150, 200, 200, 100, 200, 0xff, 0xff, 0x00, 0xff);
+    SDL_Flip(screen);
+    SDL_Delay(3000);
+
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 
