--- a/program/sdl/v1.2/cpp_keyboard.htm
+++ b/program/sdl/v1.2/cpp_keyboard.htm
@@ -59,34 +59,34 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_gfxPrimitives.h&gt;
 
-int main(int argc, char* args[])
+int main(int argc, char **args)
 {
-  char buf[255]={0};
-  SDL_Surface* screen;
-  
-  SDL_Init(SDL_INIT_VIDEO);
-  screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
-  SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0x00, 0x00));
-  SDL_Flip(screen);
- 
-  SDL_Event event;
-  while(1){
-    if(SDL_PollEvent(&amp;event)){
-      if(event.type == SDL_KEYDOWN){
-        sprintf(buf, "key: 0x%x", event.key.keysym.sym);
-        SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0x00, 0x00));
-        stringRGBA(screen, 100, 100, buf, 0xff, 0xff, 0xff, 0xff);
-        SDL_Flip(screen);
+    char buf[255] = {0};
+    SDL_Surface *screen = NULL;
 
-        if(event.key.keysym.sym == SDLK_a){
-          break;
+    SDL_Init(SDL_INIT_VIDEO);
+    screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
+    SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0x00, 0x00));
+    SDL_Flip(screen);
+
+    SDL_Event event;
+    while (1) {
+        if (SDL_PollEvent(&amp;event)) {
+            if (event.type == SDL_KEYDOWN) {
+                sprintf(buf, "key: 0x%x", event.key.keysym.sym);
+                SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0x00, 0x00));
+                stringRGBA(screen, 100, 100, buf, 0xff, 0xff, 0xff, 0xff);
+                SDL_Flip(screen);
+
+                if (event.key.keysym.sym == SDLK_a) {
+                    break;
+                }
+            }
         }
-      }
+        SDL_Delay(100);
     }
-    SDL_Delay(100);
-  }
-  SDL_Quit();
-  return 0;
+    SDL_Quit();
+    return 0;
 }
 </pre><br>
 
