--- a/program/sdl/v2.0/cpp_thread.htm
+++ b/program/sdl/v2.0/cpp_thread.htm
@@ -60,21 +60,21 @@ main.c
 
 static int mythread(void *args)
 {
-  printf("%s++\n", __func__);
-  SDL_Delay(1000);
-  printf("%s--\n", __func__);
-  return 0;
+    printf("%s++\n", __func__);
+    SDL_Delay(1000);
+    printf("%s--\n", __func__);
+    return 0;
 }
 
-int main(int argc, char *argv[])
+int main(int argc, char **argv)
 {
-  int ret=0;
-  
-  printf("%s++\n", __func__);
-  SDL_Thread *thread = SDL_CreateThread(mythread, "mythread", NULL);
-  SDL_WaitThread(thread, &ret);
-  printf("%s--\n", __func__);
-  return 0;
+    int ret = 0;
+
+    printf("%s++\n", __func__);
+    SDL_Thread *thread = SDL_CreateThread(mythread, "mythread", NULL);
+    SDL_WaitThread(thread, &amp;ret);
+    printf("%s--\n", __func__);
+    return 0;
 }
 </pre><br>
 
@@ -84,10 +84,10 @@ int main(int argc, char *argv[])
 <pre>
 $ gcc main.c -o main -lSDL2 -I/usr/include/SDL2
 $ ./main
-  main++
-  mythread++
-  mythread--
-  main--
+    main++
+    mythread++
+    mythread--
+    main--
 </pre><br>
 
 <p>
