LeetCode 1. Two Sum

--- a/program.htm
+++ b/program.htm
@@ -2875,6 +2875,10 @@ LeetCode</h3>
 <b>C++</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/leetcode/cpp_1.htm">
+    1. Two Sum</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/leetcode/cpp_228.htm">
     228. Summary Ranges</a><br>
 
