LeetCode 3. Longest Substring Without Repeating Characters

--- a/program/leetcode/c_3.htm
+++ b/program/leetcode/c_3.htm
@@ -62,10 +62,13 @@
 
 int lengthOfLongestSubstring(char *s)
 {
-    int hash[255] = {0};
-    int c0 = 0, r = 0, left = -1, len = strlen(s);
+    int r = 0;
+    int c0 = 0;
+    int left = -1;
+    int hash[128] = {0};
+    int len = strlen(s);
 
-    for (c0 = 0; c0&lt;255; c0++) {
+    for (c0 = 0; c0 &lt; 128; c0++) {
         hash[c0] = -1;
     }
 
