--- a/program/leetcode/c_4.htm
+++ b/program/leetcode/c_4.htm
@@ -57,18 +57,9 @@
 解答：
 </p>
 <pre class="brush:cpp">
-int comp(const void *s0, const void *s1)
+int comp(const void *v0, const void *v1)
 {
-    int p0 = *((int*)s0);
-    int p1 = *((int*)s1);
-     
-    if (p0 &gt; p1) {
-        return -1;
-    }
-    if (p0 &lt; p1) {
-        return 1;
-    }
-    return 0;
+    return *((int*)v0) - *((int*)v1);
 }
 
 double findMedianSortedArrays(int *nums1, int nums1Size, int *nums2, int nums2Size)
