LeetCode Updated notes.

--- a/program.htm
+++ b/program.htm
@@ -2507,9 +2507,20 @@ LeetCode</h3>
 &oplus;
 <b>C</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/leetcode/c_note.htm">
-    注意事項</a><br>
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>注意事項</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/leetcode/c_note_sort.htm">
+        Sort</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/leetcode/c_note_array.htm">
+        Array</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/leetcode/c_note_global.htm">
+        Global Variable</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/leetcode/c_1.htm">
