--- a/program/leetcode/c_note_global.htm
+++ b/program/leetcode/c_note_global.htm
@@ -44,22 +44,17 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>LeetCode &gt;&gt; C</h3>
-<p><b>注意事項</b></p>
+<h3>LeetCode &gt;&gt; C &gt;&gt; 注意事項</h3>
+<p><b>Global Variable</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
 1. <a href="https://leetcode.com/">leetcode</a><br><br>
 
-注意事項：<br>
-1. 盡量不要使用Global變數<br>
-2. 需要配置的記憶體：回傳的指標(二維)、每個陣列的大小(一維)<br>
-3. 結構存取最好透過變數<br><br>
-
-Global變數問題如下：<br>
+題目如下：<br>
 <img src="c_note/1.jpg" class="maxSize"><br><br>
 
-寫完後：
+使用Global Variable的寫法
 </p>
 <pre class="brush:cpp">
 int idx = 0;
@@ -106,7 +101,7 @@ Test cases
 </pre><br>
 
 <p>
-竟然得到非預期的Exception
+Exception
 </p>
 <pre>
 =================================================================
@@ -153,7 +148,7 @@ Shadow byte legend (one shadow byte represents 8 application bytes):
 </pre><br>
 
 <p>
-建議不要使用Global變數，改成如下即可：
+拿掉Global Variable的寫法
 </p>
 <pre class="brush:cpp">
 void push(char *p, int *idx, char ch)
@@ -187,42 +182,6 @@ char* removeStars(char *s)
     return p;
 }
 </pre><br>
-
-<p>
-二維記憶體配置如下：
-</p>
-<pre class="brush:cpp">
-int** flipAndInvertImage(int **image, int imageSize, int *imageColSize, int *returnSize, int **returnColumnSizes)
-{
-    int **p = malloc(sizeof(int*) * imageSize);
-
-    // 回傳array大小
-    *returnSize = imageSize;
-
-    // 回傳每個array[]內的大小
-    *returnColumnSizes = malloc(sizeof(int) * imageSize);
-    for (c0 = 0; c0 &lt; imageSize; c0++) {
-        (*returnColumnSizes)[c0] = imageColSize[c0];
-    }
-
-    // 配置要回傳的記憶體
-    for (c0 = 0; c0 &lt; imageSize; c0++) {
-        p[c0] = malloc(sizeof(int) * imageColSize[c0]);
-    }
-    return p;
-}
-</pre>
-<p>
-Line 3：直接填寫(不用配置)<br>
-Line 9~12：需要配置一維記憶體<br>
-Line 15~17：需要配置二維記憶體<br><br>
-
-一個詭異的結構存取問題，下面例子只有將最左邊的數值累加，2 + 5 = 7，但是結果卻是5<br>
-<img src="c_note/2.jpg" class="maxSize"><br><br>
-
-解法是透過變數做累加，2 + 5 = 7<br>
-<img src="c_note/3.jpg" class="maxSize">
-</p>
 
 <p>
 <br><a href="../../program.htm">返回上一頁</a>
