--- a/program.htm
+++ b/program.htm
@@ -2898,6 +2898,10 @@ LeetCode</h3>
     3. Longest Substring Without Repeating Characters</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/leetcode/cpp_4.htm">
+    4. Median of Two Sorted Arrays</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/leetcode/cpp_228.htm">
     228. Summary Ranges</a><br>
 
