LeetCode 6. Zigzag Conversion

--- a/program.htm
+++ b/program.htm
@@ -2910,6 +2910,10 @@ LeetCode</h3>
     5. Longest Palindromic Substring</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/leetcode/cpp_6.htm">
+    6. Zigzag Conversion</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/leetcode/cpp_228.htm">
     228. Summary Ranges</a><br>
 
